<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8F5F0"
    android:orientation="vertical"
    tools:context=".actvites.editbooking">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ticketbooking"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/namee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name" />

    <EditText
        android:id="@+id/arivale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/arival" />

    <EditText
        android:id="@+id/departuree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/departure" />

    <EditText
        android:id="@+id/noofseatse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/noofseats" />

    <EditText
        android:id="@+id/datee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="@string/date" />

    <EditText
        android:id="@+id/timee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:text="@string/time" />

    <Button
        android:id="@+id/edite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#006AD4"
        android:text="@string/edit" />

    <Button
        android:id="@+id/deletee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#006AD4"
        android:text="@string/delete" />

</LinearLayout>