<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/im1"
    android:orientation="vertical"
    tools:context=".booking">


    <ImageView
        android:id="@+id/seatLayoutImageViewp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:src="@drawable/im2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ticketbooking"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/arivalb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:inputType="text"
        android:text="@string/arival" />

    <EditText
        android:id="@+id/departureb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/departure" />

    <EditText
        android:id="@+id/noofseatsb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:text="@string/noofseats" />

    <EditText
        android:id="@+id/dateb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:text="@string/date" />

    <EditText
        android:id="@+id/timeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:text="@string/time" />

    <Button
        android:id="@+id/bookingb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#25A7E3"
        android:text="@string/booking" />
</LinearLayout>
