<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/im1"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/seatLayoutImageviewpiewp"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:src="@drawable/im2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ticketbooking"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/busoperatorp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#FCFCFC"
        android:backgroundTint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/busoperatorp" />

    <TextView
        android:id="@+id/facilitiesp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:textSize="20sp"
        tools:text="@string/facilities" />

    <!-- Add more seat buttons as per your seat layout -->

    <ImageView
        android:id="@+id/seatLayoutImageViewp"
        android:layout_width="380dp"
        android:layout_height="117dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:src="@drawable/im" />

    <Button
        android:id="@+id/seatA1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#006AD3"
        android:text="A1" />

    <Button
        android:id="@+id/seatB1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#006AD3"
        android:text="B1" />

    <Button
        android:id="@+id/proceedToBookingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#006AD4"
        android:text="Proceed to Booking" />

</LinearLayout>